--- a/style.css
+++ b/style.css
@@ -182,10 +182,11 @@ html {
 }
 
 .progress-percent {
-  width: 90%;
+  width: 0;
   height: 100%;
   background-color: #e41c6f;
   border-radius: 0.3rem;
+  transition: width 0.5sec 0.5sec ease-in-out;
 }
 
 .services {
